[package]
edition = "2021"
name    = "axum-liveview-core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre  = "0.6.0"
derive_more = "0.99"
futures     = "0.3"
once_cell   = "1.8"
regex       = "1.5.4"
thiserror   = "1"
