[package]
edition = "2021"
name    = "examples-todo-list"
publish = false
version = "0.1.0"

[dependencies]
color-eyre = "0.6.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.axum]
features = ["base64", "headers", "ws"]
version  = "0.5.13"

[dependencies.axum-liveview]
path = "../../axum-liveview"

[dependencies.tokio]
features = ["full"]
version  = "1.17.0"
