[package]
edition = "2021"
name    = "examples-todo-list"
publish = false
version = "0.1.0"

[dependencies]
color-eyre         = "0.6.2"
tracing-appender   = "0.2.2"
tracing-subscriber = "0.3.15"

[dependencies.axum]
features = ["base64", "headers", "ws"]
version  = "0.5.13"

[dependencies.axum-liveview]
path = "../../axum-liveview"

[dependencies.tokio]
features = ["full"]
version  = "1.17.0"
